# hexlib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.ru.md  archive.7z  archive.cmd  common.cmake  hexlib-intro.docx  toImprove.txt  whyItsDifficultToUse.txt
cppBase/: brood.h  (+1 more)
gpuCompiler/: CMakeLists.txt  fileTools.h  gpuCompiler.c  makeGpuCompiler.cmd  makeGpuCompiler.sh
gpuCompiler/cmdLine/: cmdLine.c  cmdLine.h  cmdLineTest.inl
gpuCompiler/parseTools/: charSet.h  parseTools.h
gpuCompiler/runProcess/: runProcess.c  runProcess.h
gpuCompiler/shared/: gpuModule.h
shellCommon/: CMakeLists.txt  checkHeap.h
shellCommon/allocation/: flatMemoryAllocator.h  flatToSpaceAllocatorThunk.h  mallocKit.h  sysAllocAlignShell.h
shellCommon/allocation/mallocAllocator/: mallocAllocator.c  mallocAllocator.h
shellCommon/allocation/mallocFlatAllocator/: mallocFlatAllocator.c  mallocFlatAllocator.h
shellCommon/baseInterfaces/: actionDefs.h  baseImageConsole.h  baseSignals.c  baseSignals.h  imageProviderMemcpy.c  imageProviderMemcpy.h
shellCommon/binaryFile/: binaryFile.h  binaryFileImpl.h  binaryFileLinux.c  binaryFileLinux.h  binaryFileWin32.c  binaryFileWin32.h
shellCommon/bmpFile/: bmpFile.c  bmpFile.h  bmpPackedHeaders.h
shellCommon/cfgVars/: README.md  README.ru.md
shellCommon/cfgVars/cfgOperations/: cfgOperations.c  cfgOperations.h
shellCommon/cfgVars/cfgSerializeImpl/: cfgSerializeImpl.c  cfgSerializeImpl.h  cfgTemporary.h
shellCommon/cfgVars/cfgTree/: README.md  README.ru.md  cfgTree.c  cfgTree.h
shellCommon/cfgVars/configFile/: configFile.c  configFile.h
shellCommon/cfgVars/types/: charTypes.h  stringReceiver.h  stringStorage.h
shellCommon/cmdArgs/: cmdArgTools.c  cmdArgTools.h  cmdArgsKit.h
shellCommon/configFile/: cfgFileEnv.c  cfgFileEnv.h  cfgSerialization.h  cfgSerializeImpl.c  cfgSerializeImpl.h  cfgSimpleString.h  cfgStringEnv.h  configFile.c  configFile.h  stringReceiver.h
shellCommon/connection/: connectionImpl.c  connectionImpl.h  connectionInterface.h  connectionWin32.c  connectionWin32.h
shellCommon/console/: statusStdout.c  statusStdout.h
shellCommon/debugBeep/: debugBeep.c  debugBeep.h
shellCommon/debugBridge/bridge/: debugBridge.h  debugBridgeApi.h  debugBridgeFwd.h  debugBridgeKit.h
shellCommon/debugBridge/bridgeImpl/: debugBridgeTest.c  debugBridgeTest.h
shellCommon/displayParamsImpl/: displayParamsImpl.c  displayParamsImpl.h
shellCommon/fibers/: fibers.c  fibers.h
shellCommon/fileToolsImpl/: fileToolsImpl.h  fileToolsLinux.c  fileToolsLinux.h  fileToolsWin32.c  fileToolsWin32.h
shellCommon/formattedOutput/: diagLogTool.c  diagLogTool.h  errorBreakThunks.h  formatStreamStdio.c  formatStreamStdio.h  formatStreamStl.c  formatStreamStl.h  logToStdConsole.c  logToStdConsole.h  logToStlConsole.c  logToStlConsole.h  messageFormatterStdio.c  messageFormatterStdio.h  messageFormatterStl.c  messageFormatterStl.h  requireMsg.h  sprintMsg.h  textFiles.h  userOutputThunks.c  userOutputThunks.h
shellCommon/interfaces/: cmdArgsKit.h  fileTools.h  fileToolsKit.h  interrupt.h  msgBox.h  syncObjects.h  threadManager.h  threadManagerKit.h
shellCommon/interruptConsole/: interruptConsole.c  interruptConsole.h
shellCommon/msgBoxImpl/: msgBoxImpl.h  msgBoxLinux.c  msgBoxLinux.h  msgBoxWin32.c  msgBoxWin32.h
shellCommon/osErrors/: errorLinux.c  errorLinux.h  errorWin32.c  errorWin32.h
shellCommon/overlayTakeover/: overlayTakeoverThunk.h
shellCommon/parseTools/: charSet.h  jsonParser.c  jsonParser.h  parseTools.h  readTools.h  writeTools.h
shellCommon/podVector/: podVector.c  podVector.h  stringStorage.h
shellCommon/processTools/: runAndWaitProcess.c  runAndWaitProcess.h
shellCommon/setThreadName/: setThreadName.c  setThreadName.h
shellCommon/signalsImpl/: signalsImpl.c  signalsImpl.h
shellCommon/signalsTools/: legacySignalsImpl.c  legacySignalsImpl.h  signalTools.c  signalTools.h
shellCommon/simpleString/: simpleString.c  simpleString.h
shellCommon/stlString/: stlString.c  stlString.h
shellCommon/testModule/: testModule.h
shellCommon/threading/: threadManagerImpl.h  threadManagerLinux.c  threadManagerLinux.h  threadManagerWin32.c  threadManagerWin32.h
shellCommon/threads/: sleep.c  sleep.h  threads.h  threadsLinux.c  threadsWin32.c
shellCommon/timerImpl/: timerImpl.h  timerStdChrono.c  timerStdChrono.h  timerUtils.c  timerUtils.disabled  timerUtils.h  timerWin32.c_disabled  timerWin32.h_disabled
shellCommon/win32/: errorWin32.c  errorWin32.h
shellCommon/yuvFile/: yuvFile.c  yuvFile.h
testbedAt/: CMakeLists.txt  debuggingParams.txt  testbedAt.c  testbedAt.h
testbedAt/atAssembly/: atAssembly.c  atAssembly.h  frameAdvanceKit.h  frameChange.c  frameChange.h
testbedAt/atEngine/: atEngine.c  atEngine.h
testbedAt/atInterface/: atInterface.h  atInterfaceKit.h
testbedAt/baseConsoleAvi/: baseConsoleAvi.c  baseConsoleAvi.h
testbedAt/baseConsoleBmp/: baseConsoleBmp.c  baseConsoleBmp.h
testbedAt/outImgAvi/: objectHolder.h  outImgAvi.c  outImgAvi.h
testbedAt/profilerShell/: profilerShell.c  profilerShell.h  profilerTarget.h
testbedAt/signalsImpl/: signalsImpl.c  signalsImpl.h
testbedAtCommon/: CMakeLists.txt  debuggingParams.txt  testbedAtCommon.h
testbedAtCommon/atAssembly/: atAssembly.c  frameAdvanceKit.h  frameChange.h
testbedAtCommon/profilerShell/: profilerTarget.h
testbedGL/: CMakeLists.txt  README.md  README.ru.md  testbedGLEntryPoint.h
testbedGL/channels/: README.md  README.ru.md
testbedGL/configKeeper/: README.md  README.ru.md  configKeeper.c  configKeeper.h
testbedGL/docs/: error-handling.en.md  error-handling.ru.md  hexlib-test-module.en.md  hexlib-test-module.ru.md  linking.en.md  linking.ru.md  ui.en.md  ui.ru.md
testbedGL/gui/: README.md  README.ru.md  guiClass.c  guiClass.h  guiModule.c  guiModule.h  keyMap.h
testbedGL/lib/: contextBinder.h  eventReceivers.h
testbedGL/logKeeper/: README.md  README.ru.md  logKeeper.c  logKeeper.h
testbedGL/testbedGL/: README.md  README.ru.md
testbedGL/worker/: README.md  README.ru.md  gpuBaseConsoleThunk.h  worker.c  worker.h
(+932 files in other folders)
